--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -30,8 +30,8 @@ body {
 }
 
 .tags {
-  background-color: #363636ef;
-  color: #e2e8f0;
+  background-color: #f1f5f9;
+  color: #282828;
 }
 
 .subhead {
